--- a/src/app/comedyhirten/comedyhirten.component.html
+++ b/src/app/comedyhirten/comedyhirten.component.html
@@ -1,14 +1,14 @@
-<div class="container" fxLayout="column" fxLayoutGap="10px">
-  <div fxFlex>
+<div class="container flex flex-col gap-3">
+  <div>
     <div>
       <h3 class="large header">Comedy Hirten - Kabarett beim HV TDP</h3>
       <hr />
     </div>
   </div>
 
-  <div fxFlex>
-    <div fxLayout="column" fxLayout.gt-sm="row">
-      <div fxFlex="50" fxFlexOffset="10px">
+  <div>
+    <div class="flex flex-col md:flex-row">
+      <div class="md:w-1/2 md:ml-2.5">
         <p class="normal"></p>
         <p class="normal">
           Die Sensation ist perfekt......Wir holen die Comedy Hirten nach Stainz! 🎉
@@ -89,12 +89,12 @@
         </p>
       </div>
 
-      <div fxLayout="column">
-        <div fxFlex="50" fxFlexOffset="25px">
+      <div class="md:w-1/2 md:ml-6 flex flex-col gap-6">
+        <div class="w-full">
           <img class="imageSmallCenter" src="assets/images/comedyhirten.jpg" style="width: 80%" />
         </div>
 
-        <div fxFlex="50" fxFlexOffset="25px">
+        <div class="w-full">
           <img
             class="imageSmallCenter"
             src="assets/images/comedyhirten_sitzplan.jpg"
@@ -105,7 +105,7 @@
     </div>
   </div>
 
-  <div fxFlex fxFlexOffset="20px" class="form-size small">
+  <div class="form-size small md:ml-5">
     <h3>Sichere dir deine Tickets gleich jetzt ⬇</h3>
   </div>
 
