--- a/src/app/donations/donations.component.html
+++ b/src/app/donations/donations.component.html
@@ -14,7 +14,7 @@
 
 @if (!selectedDonation) {
   <div>
-    <div fxLayout="column">
+    <div class="flex flex-col">
       <mat-list>
         @for (donation of donations; track donation) {
           <mat-list-item class="matchballListImage">
