--- a/src/app/duckrun/duckrun.component.html
+++ b/src/app/duckrun/duckrun.component.html
@@ -1,14 +1,14 @@
-<div class="container" fxLayout="column" fxLayoutGap="10px">
-  <div fxFlex>
+<div class="container flex flex-col gap-3">
+  <div>
     <div>
       <h3 class="large header">Entenrennen 2025</h3>
       <hr />
     </div>
   </div>
 
-  <div fxFlex>
-    <div fxLayout="column" fxLayout.gt-sm="row">
-      <div fxFlex="50" fxFlexOffset="10px">
+  <div>
+    <div class="flex flex-col md:flex-row">
+      <div class="md:w-1/2 md:ml-2.5">
         <p class="normal"></p>
         <p class="normal">3. Entenrennen des HV TDP Stainz</p>
         <p class="normal">
@@ -56,7 +56,7 @@
           <br />
         </p>
       </div>
-      <div fxFlex="50" fxFlexOffset="25px">
+      <div class="md:w-1/2 md:ml-6">
         <!-- <h3 style="text-align: center;">Hier findest du unser Stadion:</h3> -->
         <!-- this creates a google map on the page with the given lat/lng from -->
         <!-- the component as the initial center of the map: -->
@@ -65,15 +65,15 @@
     </div>
   </div>
 
-  <div fxFlex fxFlexOffset="20px" class="form-size">
+  <div class="form-size md:ml-5">
     <h3>Sichere dir deine Enten gleich jetzt ⬇</h3>
     <!-- <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p> -->
     <form
       novalidate
       [formGroup]="feedbackForm"
       (ngSubmit)="onSubmit()"
-      style="background-color: darkblue; color: rgba(255, 255, 255, 0.7); border: 27.4px solid"
-      >
+      class="form-panel form-stacked"
+    >
       <p>
         <mat-form-field class="full-width" color="{{ formErrors.firstname ? 'warn' : 'primary' }}">
           <input
@@ -83,7 +83,7 @@
             formControlName="firstname"
             placeholder="Vorname"
             required
-            />
+          />
           <mat-hint>
             <span [hidden]="!formErrors.firstname"> {{ formErrors.firstname }}</span>
           </mat-hint>
@@ -96,7 +96,7 @@
             placeholder="Nachname"
             type="text"
             required
-            />
+          />
           <mat-hint>
             <span [hidden]="!formErrors.lastname"> {{ formErrors.lastname }}</span>
           </mat-hint>
@@ -121,7 +121,7 @@
             placeholder="Telefonnummer"
             type="text"
             required
-            />
+          />
           <mat-hint>
             <span [hidden]="!formErrors.phone"> {{ formErrors.phone }}</span>
           </mat-hint>
@@ -137,7 +137,7 @@
             formControlName="address"
             placeholder="Adresse"
             required
-            />
+          />
           <mat-hint>
             <span [hidden]="!formErrors.address"> {{ formErrors.address }}</span>
           </mat-hint>
@@ -153,35 +153,36 @@
             formControlName="duckcount"
             placeholder="Anzahl der Entenlose"
             required
-            />
+          />
           <mat-hint>
             <span [hidden]="!formErrors.duckcount"> {{ formErrors.duckcount }}</span>
           </mat-hint>
         </mat-form-field>
       </p>
 
-      <button
-        style="margin: 100 auto; float: right; font-size: 20px"
-        class="formElement"
-        type="submit"
-        mat-button
-        class="background-primary"
-        [disabled]="feedbackForm.invalid"
+      <div class="form-actions">
+        <button
+          class="formElement background-primary"
+          type="submit"
+          mat-button
+          [disabled]="feedbackForm.invalid"
+          style="font-size: 20px"
         >
-        Bestellung kostenpflichtig abschicken
-      </button>
+          Bestellung kostenpflichtig abschicken
+        </button>
+      </div>
     </form>
 
     @if (submittedFeedback) {
-      <div>
-        <h2>Wir haben deine Bestellung erhalten, Vielen Dank! Wir melden uns bei dir in Kürze.</h2>
-        <p>Vorname: {{ submittedFeedback.firstname }}</p>
-        <p>Nachname: {{ submittedFeedback.lastname }}</p>
-        <p>E-Mail: {{ submittedFeedback.email }}</p>
-        <p>Telefonnummer: {{ submittedFeedback.phone }}</p>
-        <p>Adresse: {{ submittedFeedback.address }}</p>
-        <p>Anzahl der Entenlose: {{ submittedFeedback.duckcount }}</p>
-      </div>
+    <div>
+      <h2>Wir haben deine Bestellung erhalten, Vielen Dank! Wir melden uns bei dir in Kürze.</h2>
+      <p>Vorname: {{ submittedFeedback.firstname }}</p>
+      <p>Nachname: {{ submittedFeedback.lastname }}</p>
+      <p>E-Mail: {{ submittedFeedback.email }}</p>
+      <p>Telefonnummer: {{ submittedFeedback.phone }}</p>
+      <p>Adresse: {{ submittedFeedback.address }}</p>
+      <p>Anzahl der Entenlose: {{ submittedFeedback.duckcount }}</p>
+    </div>
     }
   </div>
 </div>
