--- a/src/app/hallofpapp/hallofpapp.component.html
+++ b/src/app/hallofpapp/hallofpapp.component.html
@@ -13,7 +13,7 @@
 <br />
 <br />
 
-<div fxLayout="column">
+<div class="flex flex-col">
   <mat-list>
     @for (pappfan of pappfans; track pappfan) {
       <mat-list-item class="pappListImage">
