--- a/src/app/stadionfest/stadionfest.component.html
+++ b/src/app/stadionfest/stadionfest.component.html
@@ -1,14 +1,14 @@
-<div class="container" fxLayout="column" fxLayoutGap="10px">
-  <div fxFlex>
+<div class="container flex flex-col gap-3">
+  <div>
     <div>
       <h3 class="large header">Das legendäre Stadionfest</h3>
       <hr />
     </div>
   </div>
 
-  <div fxFlex>
-    <div fxLayout="column" fxLayout.gt-sm="row">
-      <div fxFlex="50" fxFlexOffset="10px">
+  <div>
+    <div class="flex flex-col md:flex-row">
+      <div class="md:w-1/2 md:ml-2.5">
         <p class="normal"></p>
         <p class="normal">Legendenspiel gegen die SK Rapid Legenden</p>
         <p class="normal">
@@ -80,13 +80,13 @@
         <hr />
         <p class="normal">Sichert euch eine der limitierten Eintrittskarte und seid dabei! 😎</p>
       </div>
-      <div fxFlex="50" fxFlexOffset="25px">
+      <div class="md:w-1/2 md:ml-6">
         <img class="imageSmallCenter" src="assets/images/rapid.jpg" style="width: 80%" />
       </div>
     </div>
   </div>
 
-  <div fxFlex fxFlexOffset="20px" class="form-size small">
+  <div class="form-size small md:ml-5">
     <h3>Sichere dir deine Tickets gleich jetzt ⬇</h3>
   </div>
 
