--- a/src/app/zehnjahresfeier/zehnjahresfeier.component.html
+++ b/src/app/zehnjahresfeier/zehnjahresfeier.component.html
@@ -1,14 +1,14 @@
-<div class="container" fxLayout="column" fxLayoutGap="10px">
-  <div fxFlex>
+<div class="container flex flex-col gap-3">
+  <div>
     <div>
       <h3 class="large header">‼ SOMMERFEST - 10 Jahresjubiläum ‼</h3>
       <hr />
     </div>
   </div>
 
-  <div fxFlex>
-    <div fxLayout="column" fxLayout.gt-sm="row">
-      <div fxFlex="50" fxFlexOffset="10px">
+  <div>
+    <div class="flex flex-col md:flex-row">
+      <div class="md:w-1/2 md:ml-2.5">
         <p class="normal"></p>
         <p class="normal">
           2024 ist unser Jubiläumsjahr und das wollen wir mit euch gemeinsam feiern! 🎉
@@ -85,7 +85,7 @@
           <!-- 💵 15 Euro (Abendkasse - falls vorhanden)<br> -->
         </p>
       </div>
-      <div fxFlex="50" fxFlexOffset="25px">
+      <div class="md:w-1/2 md:ml-6">
         <!-- <h3 style="text-align: center;">Hier findest du unser Stadion:</h3> -->
         <!-- this creates a google map on the page with the given lat/lng from -->
         <!-- the component as the initial center of the map: -->
@@ -98,7 +98,7 @@
     </div>
   </div>
 
-  <div fxFlex fxFlexOffset="20px" class="form-size small">
+  <div class="form-size small md:ml-5">
     <h3>Sichere dir deine Tickets gleich jetzt ⬇</h3>
   </div>
 
