--- a/src/app/bigdarts/bigdarts.component.html
+++ b/src/app/bigdarts/bigdarts.component.html
@@ -1,14 +1,14 @@
-<div class="container" fxLayout="column" fxLayoutGap="10px">
-  <div fxFlex>
+<div class="container flex flex-col gap-3">
+  <div>
     <div>
       <h3 class="large header">Big Darts Turnier</h3>
       <hr />
     </div>
   </div>
 
-  <div fxFlex>
-    <div fxLayout="column" fxLayout.gt-sm="row">
-      <div fxFlex="50" fxFlexOffset="10px">
+  <div>
+    <div class="flex flex-col md:flex-row">
+      <div class="md:w-1/2 md:ml-2.5">
         <p class="normal"></p>
 
         <p class="normal">
@@ -55,7 +55,7 @@
           Turniersieg! Für die besten Mannschaften gibt es tolle Preise! 🎁
         </p>
       </div>
-      <div fxFlex="50" fxFlexOffset="25px">
+      <div class="md:w-1/2 md:ml-6">
         <!-- <h3 style="text-align: center;">Hier findest du unser Stadion:</h3> -->
         <!-- this creates a google map on the page with the given lat/lng from -->
         <!-- the component as the initial center of the map: -->
@@ -64,15 +64,15 @@
     </div>
   </div>
 
-  <div fxFlex fxFlexOffset="20px" class="form-size">
+  <div class="form-size md:ml-5">
     <h3>Sichere dir die Teilnahme am Big Darts Turnier gleich jetzt ⬇</h3>
     <!-- <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p> -->
     <form
       novalidate
       [formGroup]="feedbackForm"
       (ngSubmit)="onSubmit()"
-      style="background-color: darkblue; color: rgba(255, 255, 255, 0.7); border: 27.4px solid"
-      >
+      class="form-panel form-stacked"
+    >
       <p>
         <mat-form-field class="full-width" color="{{ formErrors.name ? 'warn' : 'primary' }}">
           <input
@@ -82,7 +82,7 @@
             formControlName="name"
             placeholder="Name"
             required
-            />
+          />
           <mat-hint>
             <span [hidden]="!formErrors.name"> {{ formErrors.name }}</span>
           </mat-hint>
@@ -98,7 +98,7 @@
             type="email"
             email
             required
-            />
+          />
           <mat-hint>
             <span [hidden]="!formErrors.email"> {{ formErrors.email }}</span>
           </mat-hint>
@@ -116,23 +116,23 @@
       </mat-form-field>
     </p> -->
 
-    <p>
-      <mat-form-field class="full-width" color="{{ formErrors.teamname ? 'warn' : 'primary' }}">
-        <input
-          class="formElement"
-          matInput
-          type="text"
-          formControlName="teamname"
-          placeholder="Mannschaftsname"
-          required
+      <p>
+        <mat-form-field class="full-width" color="{{ formErrors.teamname ? 'warn' : 'primary' }}">
+          <input
+            class="formElement"
+            matInput
+            type="text"
+            formControlName="teamname"
+            placeholder="Mannschaftsname"
+            required
           />
-        <mat-hint>
-          <span [hidden]="!formErrors.teamname"> {{ formErrors.teamname }}</span>
-        </mat-hint>
-      </mat-form-field>
-    </p>
+          <mat-hint>
+            <span [hidden]="!formErrors.teamname"> {{ formErrors.teamname }}</span>
+          </mat-hint>
+        </mat-form-field>
+      </p>
 
-    <!-- <p>
+      <!-- <p>
     <mat-form-field class="full-width"
       color="{{(formErrors.day) ? 'warn' : 'primary'}}">
       <mat-label>Präferenz Vorrunde</mat-label>
@@ -144,32 +144,33 @@
         <span [hidden]="!(formErrors.day)">{{formErrors.day}}</span>
       </mat-hint>
     </mat-form-field>
-  </p> -->
+    </p> -->
 
-  <button
-    style="margin: 100 auto; float: right; font-size: 20px; color: black"
-    class="formElement"
-    type="submit"
-    mat-button
-    class="background-primary"
-    [disabled]="feedbackForm.invalid"
-    >
-    Anmeldung jetzt abschicken
-  </button>
-</form>
+      <div class="form-actions">
+        <button
+          class="formElement background-primary"
+          type="submit"
+          mat-button
+          [disabled]="feedbackForm.invalid"
+          style="font-size: 20px; color: black"
+        >
+          Anmeldung jetzt abschicken
+        </button>
+      </div>
+    </form>
 
-@if (submittedFeedback) {
-  <div>
+    @if (submittedFeedback) {
     <div>
-      <h2>Wir haben deine Anmeldung erhalten, Vielen Dank! Wir melden uns bei dir in Kürze.</h2>
-      <p>Name: {{ submittedFeedback.name }}</p>
-      <p>E-Mail: {{ submittedFeedback.email }}</p>
-      <!-- <p>Telefonnummer: {{submittedFeedback.phone}}</p> -->
-      <p>Teamname: {{ submittedFeedback.teamname }}</p>
-      <!-- <p>Präferenz Vorrunde: {{submittedFeedback.day}}</p> -->
+      <div>
+        <h2>Wir haben deine Anmeldung erhalten, Vielen Dank! Wir melden uns bei dir in Kürze.</h2>
+        <p>Name: {{ submittedFeedback.name }}</p>
+        <p>E-Mail: {{ submittedFeedback.email }}</p>
+        <!-- <p>Telefonnummer: {{submittedFeedback.phone}}</p> -->
+        <p>Teamname: {{ submittedFeedback.teamname }}</p>
+        <!-- <p>Präferenz Vorrunde: {{submittedFeedback.day}}</p> -->
+      </div>
     </div>
+    }
   </div>
-}
-</div>
-<br />
+  <br />
 </div>
