--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -24,10 +24,9 @@
 }
 
 .footer-main {
-  display: flex;
-  flex-direction: column;
   align-items: center;
   text-align: center;
+  width: 100%;
 }
 
 .footer-heading {
@@ -141,4 +140,14 @@
 
 .footer-bottom a:hover {
   color: hotpink;
+}
+
+@media (min-width: 768px) {
+  .footer-social {
+    width: 33%;
+  }
+
+  .footer-main {
+    width: 66%;
+  }
 }
