--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,15 +1,8 @@
 <div
-  class="container footer"
-  fxLayout="row wrap"
-  fxLayout.sm="column wrap"
-  fxLayout.xs="column wrap"
-  fxLayoutAlign.gt-sm="space-between center"
-  fxLayoutAlign.sm="start stretch"
-  fxLayoutAlign.xs="start stretch"
-  fxLayoutGap="24px"
-  >
+  class="container footer flex flex-col gap-6 md:flex-row md:flex-row-wrap md:space-between md:items-center"
+>
   <!-- Social icons -->
-  <div fxFlex="100%" fxFlex.gt-sm="30%" class="footer-social">
+  <div class="footer-social w-full md:w-1/3">
     <h3 class="footer-heading">Folge uns</h3>
     <div class="footer-social-icons">
       <a
@@ -17,7 +10,7 @@
         href="https://www.facebook.com/hvtdpstainz/"
         target="_blank"
         aria-label="Facebook"
-        >
+      >
         <i class="fab fa-facebook fa-lg"></i>
       </a>
       <a
@@ -25,7 +18,7 @@
         href="https://twitter.com/HvStainz/"
         target="_blank"
         aria-label="Twitter"
-        >
+      >
         <i class="fab fa-twitter fa-lg"></i>
       </a>
       <a
@@ -33,7 +26,7 @@
         href="https://www.instagram.com/hvtdpstainz_2014/"
         target="_blank"
         aria-label="Instagram"
-        >
+      >
         <i class="fab fa-instagram fa-lg"></i>
       </a>
       <a class="social-btn mail" href="mailto:hvtdpstainz@gmx.at" aria-label="E-Mail">
@@ -43,12 +36,12 @@
   </div>
 
   <!-- Stats, sponsors, copyright -->
-  <div fxFlex="100%" fxFlex.gt-sm="65%" class="footer-main" fxLayout="column" fxLayoutGap="16px">
+  <div class="footer-main flex flex-col gap-4 w-full md:w-2/3">
     @if (sessions) {
-      <div class="footer-sessions">
-        Der HV TDP bedankt sich für <strong>{{ sessions }}</strong> Website-Aufrufe seit dem
-        23.07.2018!
-      </div>
+    <div class="footer-sessions">
+      Der HV TDP bedankt sich für <strong>{{ sessions }}</strong> Website-Aufrufe seit dem
+      23.07.2018!
+    </div>
     }
 
     <div class="footer-sponsors">
@@ -59,7 +52,7 @@
             class="sponsor-image"
             src="assets/images/udemy.jpg"
             alt="Udemy Profil Stefan Jaindl"
-            />
+          />
         </a>
 
         <a href="http://www.textildruckprofi.com/" target="_blank" class="sponsor-card">
