--- a/src/app/goaloftheseason/goaloftheseason.component.html
+++ b/src/app/goaloftheseason/goaloftheseason.component.html
@@ -36,9 +36,9 @@
 </iframe>
 </div> -->
 
-<div class="container" fxLayout="column" fxLayoutGap="10px">
+<div class="container flex flex-col gap-3">
   @if (!isMobile) {
-    <div fxFlex>
+    <div class="flex-1">
       @if (!isMobile) {
         <mat-grid-list cols="2" rowHeight="400px">
           @for (link of links; track link) {
@@ -51,7 +51,7 @@
                       appHighlight
                       class="bordered-light"
                       >
-                      <div fxFlex="50" fxFlexOffset="25px" fxLayoutAlign="center center">
+                      <div class="flex justify-center items-center w-full">
                         <iframe
                           width="560px"
                           height="315px"
@@ -60,21 +60,19 @@
                           allowfullscreen
                         ></iframe>
                       </div>
-                      <div fxFlex="25" fxFlexOffset="10px" class="item-detail">
-                        <div fxLayout="column" fxLayoutAlign="center center">
-                          <div fxFlex="50" fxFlexOffset="10px">
-                            <img
-                              class="imageSmallCenter"
-                              matListAvatar
-                              class="img-preview"
-                              src="{{ imageBaseUrl + player.imagePath }}"
-                              alt="{{ player.firstName }} {{ player.lastName }}"
-                              style="width: 80px; height: 130px"
-                              />
-                          </div>
-                          <div fxFlex="50" fxFlexOffset="10px">
-                            <p class="small">{{ player.firstName }} {{ player.lastName }}</p>
-                          </div>
+                      <div class="item-detail flex flex-col items-center justify-center w-full">
+                        <div class="mb-2">
+                          <img
+                            class="imageSmallCenter"
+                            matListAvatar
+                            class="img-preview"
+                            src="{{ imageBaseUrl + player.imagePath }}"
+                            alt="{{ player.firstName }} {{ player.lastName }}"
+                            style="width: 80px; height: 130px"
+                            />
+                        </div>
+                        <div class="text-center">
+                          <p class="small">{{ player.firstName }} {{ player.lastName }}</p>
                         </div>
                       </div>
                     </mat-grid-tile>
@@ -89,7 +87,7 @@
   }
 
   @if (isMobile) {
-    <div fxFlex>
+    <div class="flex-1">
       <mat-grid-list cols="1" rowHeight="425px">
         @for (link of links; track link) {
           <div>
@@ -101,8 +99,8 @@
                     appHighlight
                     class="bordered-light"
                     >
-                    <div fxLayout="column">
-                      <div fxFlex="50" fxFlexOffset="25px" fxLayoutAlign="center center">
+                    <div class="flex flex-col items-center justify-center gap-3">
+                      <div class="flex justify-center items-center w-full">
                         <iframe
                           width="224px"
                           height="128px"
@@ -111,21 +109,19 @@
                           allowfullscreen
                         ></iframe>
                       </div>
-                      <div fxFlex="25" fxFlexOffset="10px" class="item-detail">
-                        <div fxLayout="column" fxLayoutAlign="center center">
-                          <div fxFlex="50" fxFlexOffset="10px">
-                            <img
-                              class="imageSmallCenter"
-                              matListAvatar
-                              class="img-preview"
-                              src="{{ imageBaseUrl + player.imagePath }}"
-                              alt="{{ player.firstName }} {{ player.lastName }}"
-                              style="width: 80px; height: 130px"
-                              />
-                          </div>
-                          <div fxFlex="50" fxFlexOffset="10px">
-                            <p class="small">{{ player.firstName }} {{ player.lastName }}</p>
-                          </div>
+                      <div class="item-detail flex flex-col items-center justify-center w-full">
+                        <div class="mb-2">
+                          <img
+                            class="imageSmallCenter"
+                            matListAvatar
+                            class="img-preview"
+                            src="{{ imageBaseUrl + player.imagePath }}"
+                            alt="{{ player.firstName }} {{ player.lastName }}"
+                            style="width: 80px; height: 130px"
+                            />
+                        </div>
+                        <div class="text-center">
+                          <p class="small">{{ player.firstName }} {{ player.lastName }}</p>
                         </div>
                       </div>
                     </div>
