--- a/src/app/kleinfeldturnier/kleinfeldturnier.component.html
+++ b/src/app/kleinfeldturnier/kleinfeldturnier.component.html
@@ -1,14 +1,14 @@
-<div class="container" fxLayout="column" fxLayoutGap="10px">
-  <div fxFlex>
+<div class="container flex flex-col gap-3">
+  <div>
     <div>
       <h3 class="large header">Stainzer Kleinfeldturnier 2023</h3>
       <hr />
     </div>
   </div>
 
-  <div fxFlex>
-    <div fxLayout="column" fxLayout.gt-sm="row">
-      <div fxFlex="50" fxFlexOffset="10px">
+  <div>
+    <div class="flex flex-col md:flex-row">
+      <div class="md:w-1/2 md:ml-2.5">
         <p class="normal"></p>
         <p class="normal">‼️⚽️ SAVE THE DATE ⚽️‼️</p>
         <p class="normal">
@@ -34,119 +34,120 @@
           weitere Infos ⏩
           <a href="https://www.facebook.com/events/911818543233169/" target="_blank"
             >Stainzer Kleinfeldturnier</a
-            >
-            ⚽️
-          </p>
-        </div>
-        <div fxFlex="50" fxFlexOffset="25px">
-          <!-- <h3 style="text-align: center;">Hier findest du unser Stadion:</h3> -->
-          <!-- this creates a google map on the page with the given lat/lng from -->
-          <!-- the component as the initial center of the map: -->
-          <img
-            class="imageSmallCenter"
-            src="assets/images/turnier_2023.jpeg "
-            style="height: 300px; width: 450px"
-            />
-        </div>
+          >
+          ⚽️
+        </p>
+      </div>
+      <div class="md:w-1/2 md:ml-6">
+        <!-- <h3 style="text-align: center;">Hier findest du unser Stadion:</h3> -->
+        <!-- this creates a google map on the page with the given lat/lng from -->
+        <!-- the component as the initial center of the map: -->
+        <img
+          class="imageSmallCenter"
+          src="assets/images/turnier_2023.jpeg "
+          style="height: 300px; width: 450px"
+        />
       </div>
     </div>
+  </div>
 
-    <div fxFlex fxFlexOffset="20px" class="form-size">
-      <h3>Sichere dir die Teilnahme am legendären Stainzer Turnierklassiker gleich jetzt ⬇</h3>
-      <!-- <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p> -->
-      <form
-        novalidate
-        [formGroup]="feedbackForm"
-        (ngSubmit)="onSubmit()"
-        style="background-color: darkblue; color: rgba(255, 255, 255, 0.7); border: 27.4px solid"
-        >
-        <p>
-          <mat-form-field class="full-width" color="{{ formErrors.name ? 'warn' : 'primary' }}">
-            <input
-              class="formElement"
-              matInput
-              type="text"
-              formControlName="name"
-              placeholder="Ansprechperson"
-              required
-              />
-            <mat-hint>
-              <span [hidden]="!formErrors.name"> {{ formErrors.name }}</span>
-            </mat-hint>
-          </mat-form-field>
-        </p>
+  <div class="form-size md:ml-5">
+    <h3>Sichere dir die Teilnahme am legendären Stainzer Turnierklassiker gleich jetzt ⬇</h3>
+    <!-- <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p> -->
+    <form
+      novalidate
+      [formGroup]="feedbackForm"
+      (ngSubmit)="onSubmit()"
+      class="form-panel form-stacked"
+    >
+      <p>
+        <mat-form-field class="full-width" color="{{ formErrors.name ? 'warn' : 'primary' }}">
+          <input
+            class="formElement"
+            matInput
+            type="text"
+            formControlName="name"
+            placeholder="Ansprechperson"
+            required
+          />
+          <mat-hint>
+            <span [hidden]="!formErrors.name"> {{ formErrors.name }}</span>
+          </mat-hint>
+        </mat-form-field>
+      </p>
 
-        <p>
-          <mat-form-field class="full-width" color="{{ formErrors.email ? 'warn' : 'primary' }}">
-            <input
-              matInput
-              formControlName="email"
-              placeholder="E-Mail"
-              type="email"
-              email
-              required
-              />
-            <mat-hint>
-              <span [hidden]="!formErrors.email"> {{ formErrors.email }}</span>
-            </mat-hint>
-          </mat-form-field>
-        </p>
+      <p>
+        <mat-form-field class="full-width" color="{{ formErrors.email ? 'warn' : 'primary' }}">
+          <input
+            matInput
+            formControlName="email"
+            placeholder="E-Mail"
+            type="email"
+            email
+            required
+          />
+          <mat-hint>
+            <span [hidden]="!formErrors.email"> {{ formErrors.email }}</span>
+          </mat-hint>
+        </mat-form-field>
+      </p>
 
-        <p>
-          <mat-form-field class="full-width" color="{{ formErrors.phone ? 'warn' : 'primary' }}">
-            <input
-              class="formElement"
-              matInput
-              formControlName="phone"
-              placeholder="Telefonnummer"
-              type="text"
-              required
-              />
-            <mat-hint>
-              <span [hidden]="!formErrors.phone"> {{ formErrors.phone }}</span>
-            </mat-hint>
-          </mat-form-field>
-        </p>
+      <p>
+        <mat-form-field class="full-width" color="{{ formErrors.phone ? 'warn' : 'primary' }}">
+          <input
+            class="formElement"
+            matInput
+            formControlName="phone"
+            placeholder="Telefonnummer"
+            type="text"
+            required
+          />
+          <mat-hint>
+            <span [hidden]="!formErrors.phone"> {{ formErrors.phone }}</span>
+          </mat-hint>
+        </mat-form-field>
+      </p>
 
-        <p>
-          <mat-form-field class="full-width" color="{{ formErrors.teamname ? 'warn' : 'primary' }}">
-            <input
-              class="formElement"
-              matInput
-              type="text"
-              formControlName="teamname"
-              placeholder="Mannschaftsname"
-              required
-              />
-            <mat-hint>
-              <span [hidden]="!formErrors.teamname"> {{ formErrors.teamname }}</span>
-            </mat-hint>
-          </mat-form-field>
-        </p>
+      <p>
+        <mat-form-field class="full-width" color="{{ formErrors.teamname ? 'warn' : 'primary' }}">
+          <input
+            class="formElement"
+            matInput
+            type="text"
+            formControlName="teamname"
+            placeholder="Mannschaftsname"
+            required
+          />
+          <mat-hint>
+            <span [hidden]="!formErrors.teamname"> {{ formErrors.teamname }}</span>
+          </mat-hint>
+        </mat-form-field>
+      </p>
 
+      <div class="form-actions">
         <button
-          style="margin: 100 auto; float: right; font-size: 20px"
-          class="formElement"
+          class="formElement background-primary"
           type="submit"
           mat-button
-          class="background-primary"
           [disabled]="feedbackForm.invalid"
-          >
+          style="font-size: 20px"
+        >
           Anmeldung jetzt abschicken
         </button>
-      </form>
+      </div>
+    </form>
 
-      @if (submittedFeedback) {
-        <div>
-          <div>
-            <h2>Wir haben deine Anmeldung erhalten, Vielen Dank! Wir melden uns bei dir in Kürze.</h2>
-            <p>Ansprechperson: {{ submittedFeedback.name }}</p>
-            <p>E-Mail: {{ submittedFeedback.email }}</p>
-            <p>Telefonnummer: {{ submittedFeedback.phone }}</p>
-            <p>Teamname: {{ submittedFeedback.teamname }}</p>
-          </div>
-        </div>
-      }
+    @if (submittedFeedback) {
+    <div>
+      <div>
+        <h2>Wir haben deine Anmeldung erhalten, Vielen Dank! Wir melden uns bei dir in Kürze.</h2>
+        <p>Ansprechperson: {{ submittedFeedback.name }}</p>
+        <p>E-Mail: {{ submittedFeedback.email }}</p>
+        <p>Telefonnummer: {{ submittedFeedback.phone }}</p>
+        <p>Teamname: {{ submittedFeedback.teamname }}</p>
+      </div>
     </div>
-    <br />
+    }
   </div>
+  <br />
+</div>
