--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,14 +1,14 @@
-<div class="container" fxLayout="column" fxLayoutGap="10px">
-  <div fxFlex>
+<div class="container flex flex-col gap-3">
+  <div>
     <div>
       <h3 class="large header">Kontaktiere den HV TDP Stainz</h3>
       <hr />
     </div>
   </div>
 
-  <div fxFlex>
-    <div fxLayout="column" fxLayout.gt-sm="row">
-      <div fxFlex="50" fxFlexOffset="10px">
+  <div>
+    <div class="flex flex-col md:flex-row">
+      <div class="md:w-1/2 md:ml-2.5">
         <h3>Rechnungsadresse</h3>
         <address>
           Engelweingartenstraße 12d/14<br />
@@ -26,120 +26,107 @@
           Österreich<br />
         </address>
       </div>
-      <div fxFlex="50" fxFlexOffset="25px">
+      <div class="md:w-1/2 md:ml-6">
         <h3 style="text-align: center">Hier findest du unser Stadion:</h3>
         <!-- this creates a google map on the page with the given lat/lng from -->
         <!-- the component as the initial center of the map: -->
         @if (apiLoaded | async) {
-          <div>
-            <google-map [options]="options"></google-map>
-          </div>
+        <div>
+          <google-map [options]="options"></google-map>
+        </div>
         }
       </div>
     </div>
   </div>
 
-  <div fxFlex fxFlexOffset="20px" class="form-size">
+  <div class="form-size md:ml-5">
     <h3>Sende uns dein Feedback</h3>
     <!-- <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p> -->
     <form
       novalidate
       [formGroup]="feedbackForm"
       (ngSubmit)="onSubmit()"
-      style="background-color: darkblue; color: rgba(255, 255, 255, 0.7); border: 27.4px solid"
-      >
-      <p>
-        <mat-form-field class="half-width" color="{{ formErrors.firstname ? 'warn' : 'primary' }}">
-          <input
-            class="formElement"
-            matInput
-            type="text"
-            formControlName="firstname"
-            placeholder="Vorname"
-            required
-            />
-          <mat-hint>
-            <span [hidden]="!formErrors.firstname"> {{ formErrors.firstname }}</span>
-          </mat-hint>
-        </mat-form-field>
-        <mat-form-field class="half-width" color="{{ formErrors.lastname ? 'warn' : 'primary' }}">
-          <input
-            class="formElement"
-            matInput
-            formControlName="lastname"
-            placeholder="Nachname"
-            type="text"
-            required
-            />
-          <mat-hint>
-            <span [hidden]="!formErrors.lastname"> {{ formErrors.lastname }}</span>
-          </mat-hint>
-        </mat-form-field>
-      </p>
-      <p>
-        <mat-form-field class="half-width" color="{{ formErrors.email ? 'warn' : 'primary' }}">
-          <input
-            matInput
-            formControlName="email"
-            placeholder="E-Mail"
-            type="email"
-            email
-            required
-            />
-          <mat-hint>
-            <span [hidden]="!formErrors.email"> {{ formErrors.email }}</span>
-          </mat-hint>
-        </mat-form-field>
-      </p>
+      class="form-panel form-stacked"
+    >
+      <mat-form-field class="full-width" color="{{ formErrors.firstname ? 'warn' : 'primary' }}">
+        <input
+          class="formElement"
+          matInput
+          type="text"
+          formControlName="firstname"
+          placeholder="Vorname"
+          required
+        />
+        <mat-hint>
+          <span [hidden]="!formErrors.firstname"> {{ formErrors.firstname }}</span>
+        </mat-hint>
+      </mat-form-field>
+      <mat-form-field class="full-width" color="{{ formErrors.lastname ? 'warn' : 'primary' }}">
+        <input
+          class="formElement"
+          matInput
+          formControlName="lastname"
+          placeholder="Nachname"
+          type="text"
+          required
+        />
+        <mat-hint>
+          <span [hidden]="!formErrors.lastname"> {{ formErrors.lastname }}</span>
+        </mat-hint>
+      </mat-form-field>
+
+      <mat-form-field class="full-width" color="{{ formErrors.email ? 'warn' : 'primary' }}">
+        <input matInput formControlName="email" placeholder="E-Mail" type="email" email required />
+        <mat-hint>
+          <span [hidden]="!formErrors.email"> {{ formErrors.email }}</span>
+        </mat-hint>
+      </mat-form-field>
 
       <mat-slide-toggle formControlName="agreeContact"
         >Dürfen wir dich kontaktieren?</mat-slide-toggle
+      >
+
+      <mat-form-field class="full-width">
+        <textarea
+          class="formElement"
+          matInput
+          formControlName="message"
+          placeholder="Dein Feedback"
+          rows="12"
+        ></textarea>
+      </mat-form-field>
+
+      <mat-checkbox matInput formControlName="agreeGDPR"
+        >Mit dem Absenden dieser Nachrichten akzeptiere ich die Bestimmungen der
+        Datenschutzgrundverordnung.</mat-checkbox
+      >
+      <mat-hint>
+        <span [hidden]="formErrors.gdpr">
+          {{ formErrors.gdpr }}
+        </span>
+      </mat-hint>
+
+      <div class="form-actions">
+        <button
+          class="formElement background-primary"
+          type="submit"
+          mat-button
+          [disabled]="feedbackForm.invalid || feedbackForm.controls['agreeGDPR'].value == false"
+          style="font-size: 20px"
         >
-        <p>
-          <mat-form-field class="full-width">
-            <textarea
-              class="formElement"
-              matInput
-              formControlName="message"
-              placeholder="Dein Feedback"
-              rows="12"
-            ></textarea>
-          </mat-form-field>
-        </p>
-        <p>
-          <mat-checkbox matInput formControlName="agreeGDPR"
-            >Mit dem Absenden dieser Nachrichten akzeptiere ich die Bestimmungen der
-            Datenschutzgrundverordnung.</mat-checkbox
-            >
-            <mat-hint>
-              <span [hidden]="formErrors.gdpr">
-                {{ formErrors.gdpr }}
-              </span>
-            </mat-hint>
-          </p>
-
-          <button
-            style="margin: 100 auto; float: right; font-size: 20px"
-            class="formElement"
-            type="submit"
-            mat-button
-            class="background-primary"
-            [disabled]="feedbackForm.invalid || feedbackForm.controls['agreeGDPR'].value == false"
-            >
-            Senden
-          </button>
-        </form>
-
-        @if (submittedFeedback) {
-          <div>
-            <h2>Dein Feedback:</h2>
-            <p>Vorname: {{ submittedFeedback.firstname }}</p>
-            <p>Nachname: {{ submittedFeedback.lastname }}</p>
-            <p>E-Mail: {{ submittedFeedback.email }}</p>
-            <p>Dürfen wir dich kontaktieren?: {{ submittedFeedback.agree }}</p>
-            <p>Feedback: {{ submittedFeedback.message }}</p>
-          </div>
-        }
+          Senden
+        </button>
       </div>
+    </form>
+    @if (submittedFeedback) {
+    <div>
+      <h2>Dein Feedback:</h2>
+      <p>Vorname: {{ submittedFeedback.firstname }}</p>
+      <p>Nachname: {{ submittedFeedback.lastname }}</p>
+      <p>E-Mail: {{ submittedFeedback.email }}</p>
+      <p>Dürfen wir dich kontaktieren?: {{ submittedFeedback.agree }}</p>
+      <p>Feedback: {{ submittedFeedback.message }}</p>
     </div>
-    <br />
+    }
+  </div>
+</div>
